--- a/app/views/speaker/speaker_details.html
+++ b/app/views/speaker/speaker_details.html
@@ -1,3 +1,6 @@
+<div class="row">
+  <div class="col12">
+
     <h4>Please update</h4>
     <ul>
         <li>
@@ -50,6 +53,7 @@
             <textarea id="speakerDetailsBio"
                       type="text"
                       ng-model="model.speakerDetails.speakerBio"
+                      rows="7"
                       devoxx-uniform
                       ng-required="true"></textarea>
         </li>
@@ -72,3 +76,7 @@
                    devoxx-validate-twitter-handle>
         </li>
     </ul>
+
+
+  </div>
+</div>
