--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -188,28 +188,8 @@ a.btn:hover {
 	background-position: -98px -42px;
 }
 
-
-#contactList li {
-    padding-top: 15px;
-    width: 290px;
-    overflow: hidden;
-}
-#contactList li .popup {
-    background: url(../images/lightgrey_hover_bg.jpg);
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    padding: 30px 45px 0;
-    width: 200px;
-    height: 85%;
-    overflow: hidden;
-
-    transition: all 0.15s ease-out 0s;
-    -webkit-transition: all 0.15s ease-out 0s;
-}
-#contactList li:hover .popup {
-    top: 0;
+#contactList li .icon {
+	border: 2px solid #fff;
 }
 
 #trackList li .popup {
@@ -321,7 +301,7 @@ body {
 }
 body {
 	color: #878787;
-	font: 14px/19px Georgia, "Times New Roman", Times, serif;
+	font: 15px 'Lato', Georgia, "Times New Roman", Times, serif;
 	min-width: 408px;
 }
 
@@ -1005,6 +985,7 @@ footer .sponsors a {
 }
 
 #googlemap {
+	background: url(../images_dummy/gmap_dummy.jpg) no-repeat center;
 	height: 530px;
 }
 
@@ -1221,16 +1202,19 @@ footer .sponsors a {
 }
 
 @media only screen and (max-width: 600px) {
-
+	
 	.menuSpacer {
 		height: 65px;
 	}
-
+		
 	header .col6 img {
 		display: block;
 		margin: 0;
 	}
-
+	
+	
+	
+		
 	#splash h1,
 	#splash .btn {
 		margin: 0;
@@ -1253,7 +1237,8 @@ footer .sponsors a {
 		margin: 0;
 		width: 100%;
 	}
-
+	
+	
 	#tweetwall ul li {
 		min-height: 0;
 		padding: 1px 0;
@@ -1277,13 +1262,16 @@ footer .sponsors a {
 		-o-transform: translateX(0px);
 		-ms-transform: translateX(0px);
 		transform: translateX(0px);
+		
 	}
 	
 	.dotList li {
 		margin: 0 0 20px;
 		width: 210px;
 	}
-
+	
+	
+	
 	.faq .banner {
 		margin-top: 50px;
 	}
