--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -66,18 +66,13 @@
                     <div class="popup">
                         <h4>Jo Voordeckers</h4>
 
-                        <p>Jo is no newcomer to the Java community, at JavaOne'08 he spoke on how to implement streaming video in the
-                            pre-release of JavaFX and also developed the Parleys.com JavaFX demo for the JavaOne'08 keynote. Next to his
-                            day job as a Java, web and mobile developer for Parleys.com and Devoxx, he is active in the Devoxx steering
-                            committee and the Belgium JUG where he drives the coding dojo sessions. Jo spends most of his free time
-                            experimenting with new technologies and enjoys speaking about Swing, JavaFX, Flex, Mercurial/GIT and lately
-                            HTML5. Jo has presented at JavaOne, Devoxx and BeJUG, blogs at blog.pursuit.be</p>
+                        <p><img src="../images/tracks/icon_web.png" width="30" style="float:left"><img src="../images/tracks/icon_mobile.png" width="30" style="float:left">
+                            Enjoys a good challenge, learning and teaching new technologies, loves building UIs and make apps scale. </p>
 
                         <div class="links clearfix">
-                            <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
+                            <a href="http://be.linkedin.com/in/jovoordeckers" class="btn_linkedin">LinkedIn</a>
                             <a href="http://twitter.com/jovoordeckers" class="btn_twitter">Twitter</a>
-                            <a href="#" class="btn_mail">Mail me</a>
+                            <a href="mailto:jo.voordeckers@devoxx.com" class="btn_mail">Mail me</a>
                         </div>
                     </div>
                 </li>
