--- a/app/styles/devoxx.css
+++ b/app/styles/devoxx.css
@@ -250,22 +250,6 @@ div.selector.ng-invalid {
     background-size: 156px;
 }
 
-#tweetwall ul li:nth-child(even) .visual {
-    float: right;
-}
-#tweetwall ul li:nth-child(even) .tweet {
-    margin: 0 220px 0 90px;
-}
-#tweetwall ul li:nth-child(even) .tweet:hover {
-    -moz-transform: translateX(20px);
-    -webkit-transform: translateX(20px);
-    -o-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    transform: translateX(20px);
-    
-}
-#tweetwall ul li:nth-child(even) .tweet .ballon {
-    background-position: 0 0;
-    left: auto;
-    right: -23px;
+#tweetwall .tweet {
+    cursor: pointer;
 }
