--- a/app/views/home.html
+++ b/app/views/home.html
@@ -87,8 +87,7 @@
                     <img src="../images/news/site.png" alt="" />
                     <div class="date">3 June '13</div>
                     <h4>New site</h4>
-                    <p>Hope you like our brand new website?</br>The CFP part has also been redeveloped using AngularJS and is open sourced on GitHub/devoxx.
-                       Yes we welcome pull requests with any kind of improvements!</br>Click here fore more info about our team</p>
+                    <p>Hope you like our brand new website?</br>It's built using AngularJS and the call for papers is open sourced on <a href="http://github.com/devoxx">github.com/devoxx</a>. Yes we welcome pull requests with any kind of improvements!</br><a href="#about">Read more...</a></p>
                 </a>
             </li>
             <li>
@@ -102,32 +101,50 @@
             </li>
             <li>
                 <!--<a href="#">-->
+                    <img src="../images/news/registration.png" alt="Devoxx Registrations" />
+                    <div class="date">3 June '13</div>
+                    <h4>Registrations Open Soon</h4>
+                    <p>As always we under-estimated the work on our new website including the new Call For Papers module.
+                       We expect to open Devoxx registrations by the end of June.</p>
+                <!--</a>-->
+            </li>
+            <li>
+                <!--<a href="#">-->
                     <img src="../images/news/borntobe.png" alt="Born To Be" />
                 <div class="date">3 June '13</div>
                     <h4>New Devoxx Theme</h4>
                     <p>The majority of the Devoxxians are "Born to be..." a developer and many tell us they actually feel reborn after attending Devoxx.  :)</p>
                 <!--</a>-->
             </li>
+
             <li>
-                <!--<a href="#">-->
-                    <img src="../images/news/registration.png" alt="Devoxx Registrations" />
-                    <div class="date">3 June '13</div>
-                    <h4>Registrations Open Soon</h4>
-                    <p>As always we under-estimated the work for our new website including the redevelopment of the CFP proposals module.
-                       As a result the Devoxx registrations will open a bit later, our target is end of June.</p>
-                <!--</a>-->
-            </li>
-            <li>
-                <a href="#team">
-                <img src="../images/news/team.png" alt="The Devoxx BE team" />
-                <div class="date">3 June '13</div>
-                <h4>The Devoxx Team</h4>
-                <p>The international Devoxx team has already been working hard behind the scenes.
-                   Our batteries are again fully charged to organise a great Devoxx experience for you!
+                <a href="http://localhost:8003/home.html#">
+                <img src="../images/news/DevoxxUK-2013.jpg" alt="The Devoxx UK team" />
+                <div class="date">30 March '13</div>
+                <h4>First Devoxx UK</h4>
+                <p>The inaugural Devoxx UK, about 500 developers experienced the Devoxx atmosphere in Londen. More than enough to call it a success, but more info about this later. 
                 </p>
                 </a>
             </li>
-
+            <li>
+                <a href="http://localhost:8003/home.html#">
+                <img src="../images/news/DevoxxFR-2013.jpg" alt="The Devoxx FR team" />
+                <div class="date">29 March '13</div>
+                <h4>Devoxx FR on rails</h4>
+                <p>The second Devoxx France edition was a blast, close to 1500 'Frenchy' developers landed in Paris for a week of Devoxx geekery. The demand for Devoxx FR tickets is so high that we'll need to find a bigger venue next year.
+                </p>
+                </a>
+            </li>            
+            <li>
+                <a href="#team">
+                <img src="../images/news/team.png" alt="The Devoxx BE team" />
+                <div class="date">23 Feb '13</div>
+                <h4>The Devoxx Team</h4>
+                <p>The international Devoxx team has already been working hard behind the scenes.
+                   Our batteries are again fully charged to organise another great Devoxx experience for you!
+                </p>
+                </a>
+            </li>            
         </ul>
     </div>
 
@@ -276,12 +293,12 @@
                         
                         <div class="carousel">
                             <ul>
-                                <li ng-repeat="tweet in tweets">
-                                    <div class="visual" style="background-image: url({{tweet.image}});"></div>
-                                    <div class="tweet">
+                                <li tweetwall ng-repeat="tweet in tweets" class="{{tweet.class}}">
+                                    <div class="visual" ng-style="{backgroundImage: tweet.image}" ></div>
+                                    <div class="tweet" ng-click="openStatus(tweet)">
                                         <p>{{tweet.tweet}}</p>
                                         <div class="info">
-                                            <a href="#">@{{tweet.author}}</a> , {{tweet.time}} on Twitter
+                                            <a href="http://twitter.com/{{tweet.author}}">@{{tweet.author}}</a> , {{tweet.time}} via <span ng-bind-html-unsafe="tweet.source"></span>
                                         </div>
                                         <span class="ballon"></span>
                                     </div>
