--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,53 +1,136 @@
-<!-- <div id="carousel">
-    <ul carousel>
+<div id="carousel" carousel>
+
+    <ul>
         <li>
             <div class="grid">
-
-                <div class="row">
+            
+                <div class="row">           
                     <div class="col9 content">
+                    
                         <h1>Born to be</h1>
                         <h3>Edition 2013</h3>
                         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
                         <a href="#" class="btn">Link here</a>
+                        
                     </div>
                     <div class="col11">
+                    
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
+                    
                     </div>
                 </div>
-            </div>
+                
+            </div>                  
         </li>
         <li>
             <div class="grid">
-                <div class="row">
+            
+                <div class="row">           
                     <div class="col9 content">
+                    
                         <h1>Last call for papers</h1>
                         <h3>Become a speaker</h3>
                         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
                         <a href="#" class="btn">Submit a paper</a>
+                        
                     </div>
                     <div class="col11">
+                    
                         <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
+                    
                     </div>
                 </div>
-            </div>
+                
+            </div>                  
         </li>
         <li>
             <div class="grid">
-                <div class="row">
+            
+                <div class="row">           
                     <div class="col9 content">
-                        <h1>Slide 3</h1>
-                        <h3>edition 2013</h3>
+                                                
+                        <h1>Let's talk about Java</h1>
+                        <h3>Tracks 2013</h3>
                         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
-                        <a href="#" class="btn">Link here</a>
+                        <a href="#" class="btn">All tracks</a>
+                        
                     </div>
                     <div class="col11">
-                        <img src="images_dummy/slide_03.png" class="visual" alt="Be born again">
+                    
+                        <img src="images_dummy/slide_java.png" class="visual" alt="Be born again">
+                    
                     </div>
                 </div>
-            </div>
+                
+            </div>                  
+        </li>
+        <li>
+            <div class="grid">
+            
+                <div class="row">           
+                    <div class="col9 content">
+                    
+                        <h1>What's new about Andriod</h1>
+                        <h3>Tracks 2013</h3>
+                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
+                        <a href="#" class="btn">All tracks</a>
+                        
+                    </div>
+                    <div class="col11">
+                    
+                        <img src="images_dummy/slide_android.png" class="visual" alt="Be born again">
+                    
+                    </div>
+                </div>
+                
+            </div>                  
+        </li>
+        <li>
+            <div class="grid">
+            
+                <div class="row">           
+                    <div class="col9 content">
+                    
+                        <h1>What you didn't know about HTML5</h1>
+                        <h3>Tracks 2013</h3>
+                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
+                        <a href="#" class="btn">All tracks</a>
+                        
+                    </div>
+                    <div class="col11">
+                    
+                        <img src="images_dummy/slide_html5.png" class="visual" alt="Be born again">
+                    
+                    </div>
+                </div>
+                
+            </div>                  
+        </li>
+        <li>
+            <div class="grid">
+            
+                <div class="row">           
+                    <div class="col9 content">
+                    
+                        <h1>What you didn't know about HTML5</h1>
+                        <h3>Tracks 2013</h3>
+                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
+                        <a href="#" class="btn">Link here</a>
+                        
+                    </div>
+                    <div class="col11">
+                    
+                        <img src="images_dummy/slide_03.png" class="visual" alt="Be born again">
+                    
+                    </div>
+                </div>
+                
+            </div>                  
         </li>
     </ul>
-</div> -->
+
+</div>
+
 
  <div id="about" class="area lightgrey">
     <div class="grid">
@@ -83,12 +166,13 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
-                <a href="#about">
-                    <img src="../images/news/site.png" alt="" />
+                <a href="#about"><img src="../images/news/site.png" alt=""></a>
                     <div class="date">3 June '13</div>
                     <h4>New site</h4>
-                    <p>Hope you like our brand new website?</br>It's built using AngularJS and the call for papers is open sourced on <a href="http://github.com/devoxx">github.com/devoxx</a>. Yes we welcome pull requests with any kind of improvements!</br><a href="#about">Read more...</a></p>
-                </a>
+                    <p>Hope you like our brand new website?<br>It's built using AngularJS and the call for papers is available on 
+                        <a href="http://github.com/devoxx">github.com/devoxx</a>, we accept pull requests!
+                        <br><a href="#about">Read more...</a></p>
+                
             </li>
             <li>
 
