--- a/app/views/home.html
+++ b/app/views/home.html
@@ -9,8 +9,8 @@
                     
                         <h1>Born to be</h1>
                         <h3>Edition 2013</h3>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
-                        <a href="#" class="btn">Link here</a>
+                        <p></p>
+                        <a href="#/schedule" class="btn hidden">Schedule</a>
                         
                     </div>
                     <div class="col11">
@@ -28,10 +28,10 @@
                 <div class="row">           
                     <div class="col9 content">
                     
-                        <h1>Last call for papers</h1>
-                        <h3>Become a speaker</h3>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
-                        <a href="#" class="btn">Submit a paper</a>
+                        <h1>Call for Presentations</h1>
+                        <h3>Speak @Devoxx</h3>
+                        <p>We're constantly looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>
+                        <a href="#/" class="btn" scroll="tracks">Submit a talk</a>
                         
                     </div>
                     <div class="col11">
@@ -49,10 +49,10 @@
                 <div class="row">           
                     <div class="col9 content">
                                                 
-                        <h1>Let's talk about Java</h1>
+                        <h1>Let's talk Java</h1>
                         <h3>Tracks 2013</h3>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
-                        <a href="#" class="btn">All tracks</a>
+                        <p>Java is at the roots of this conference, come learn about what's new in Java SE/EE, JSRs, JDK8, modularity and much more at Devoxx</p>
+                        <a href="#/" scroll="tracks" class="btn">All tracks</a>
                         
                     </div>
                     <div class="col11">
@@ -70,10 +70,10 @@
                 <div class="row">           
                     <div class="col9 content">
                     
-                        <h1>What's new about Andriod</h1>
+                        <h1>What's new in Andriod</h1>
                         <h3>Tracks 2013</h3>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
-                        <a href="#" class="btn">All tracks</a>
+                        <p>Android is the largest mobile platform in use today, come learn about the latest updates from Googlers or passionate member of it's ever growing community</p>
+                        <a href="#/" class="btn" scroll="tracks">All tracks</a>
                         
                     </div>
                     <div class="col11">
@@ -93,8 +93,8 @@
                     
                         <h1>What you didn't know about HTML5</h1>
                         <h3>Tracks 2013</h3>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.</p>
-                        <a href="#" class="btn">All tracks</a>
+                        <p>Server-side web development is out, learn about the new breed of client side frameworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
+                        <a href="#/" class="btn" scroll="tracks">All tracks</a>
                         
                     </div>
                     <div class="col11">
@@ -106,7 +106,7 @@
                 
             </div>                  
         </li>
-        <li>
+<!--         <li>
             <div class="grid">
             
                 <div class="row">           
@@ -127,7 +127,7 @@
                 
             </div>                  
         </li>
-    </ul>
+ -->    </ul>
 
 </div>
 
@@ -180,7 +180,7 @@
                     <div class="date">3 June '13</div>
                     <h4>Call For Papers Now Open</h4>
                     <p>The CFP for Devoxx Belgium 2013 is now open and closes end of June.
-                    </br>Please login and submit your proposals and help us shape another awesome conference.</p>
+                    </br>Please login and submit your talks and help us shape another awesome conference.</p>
 
             </li>
             <li>
@@ -233,14 +233,14 @@
     </div>
 
 </div>
-
+        
         <div id="tracks" class="area orange">
             <div class="grid">
             
                 <div class="row">           
                     <div class="col20">
-                        
-                        <h2>Tracks <span>2013</span></h2>
+
+                        <h2><a name="tracks"></a>Tracks <span>2013</span></h2>
 
                         <ul class="dotList" id="trackList">
                             <li>
@@ -340,7 +340,7 @@
                         <br><br>
 
                         <h2>
-                             <a href="#/proposal" class="btn">Submit your proposal</a>
+                             <a href="#/proposal" class="btn">Submit a talk</a>
                         </h2>
                             
 
