Header copywriting and scroll to tracks

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -9,7 +9,7 @@
                     
                         <h1>Born to be</h1>
                         <h3>Edition 2013</h3>
-                        <p></p>
+                        <p>Ready for your rebirth @Devoxx?</p>
                         <a href="#/schedule" class="btn hidden">Schedule</a>
                         
                     </div>
@@ -30,7 +30,7 @@
                     
                         <h1>Call for Presentations</h1>
                         <h3>Speak @Devoxx</h3>
-                        <p>We're constantly looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>
+                        <p>We're looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>
                         <a href="#/" class="btn" scroll="tracks">Submit a talk</a>
                         
                     </div>
@@ -202,7 +202,7 @@
             </li>
 
             <li>
-                <a href="http://localhost:8003/home.html#">
+                <a href="http://www.devoxx.com/display/UK13/Home">
                 <img src="../images/news/DevoxxUK-2013.jpg" alt="The Devoxx UK team" />
                 <div class="date">30 March '13</div>
                 <h4>First Devoxx UK</h4>
@@ -211,7 +211,7 @@
                 </a>
             </li>
             <li>
-                <a href="http://localhost:8003/home.html#">
+                <a href="http://www.devoxx.com/display/FR13/Accueil">
                 <img src="../images/news/DevoxxFR-2013.jpg" alt="The Devoxx FR team" />
                 <div class="date">29 March '13</div>
                 <h4>Devoxx FR on rails</h4>
@@ -220,7 +220,7 @@
                 </a>
             </li>            
             <li>
-                <a href="#team">
+                <a href="#/team">
                 <img src="../images/news/team.png" alt="The Devoxx BE team" />
                 <div class="date">23 Feb '13</div>
                 <h4>The Devoxx Team</h4>
