--- a/app/views/speaker/speaker_details.html
+++ b/app/views/speaker/speaker_details.html
@@ -9,7 +9,7 @@
                    type="email"
                    ng-model="model.speakerDetails.email"
                    devoxx-uniform
-                   ng-disabled="true">
+                   ng-required="true">
 
 
         <li>
