added some bars & restaurants

--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -76,7 +76,7 @@
                     <li><a href="http://www.accorhotels.com/gb/hotel-8094-hotel-mercure-antwerpen-centrum-opera/index.shtml">Mercure Centrum Opera</a> (4km)</li>
                     <li><a href="http://ibishotel.ibis.com/gb/hotel-1453-ibis-antwerpen-centrum/index.shtml">Ibis Hotel</a> (4km)</li>
                     <li><a href="http://www.hyllithotel.be/hyllit_hotel_antwerpen-ligging.asp?taal=en">Hyllit Hotel</a> (4km)</li>
-                    <li><a href="http://www.radissonblu.com/astridhotel-antwerp">Radisson SAS Hotel</a> (5km)</li>
+                    <li><a href="http://www.radissonblu.com/astridhotel-antwerp">Radisson Blu Astrid Hotel</a> (5km)</li>
                     <li><a href="http://www.tulipinnantwerpen.com/default.aspx">Tulip Inn</a> (4km)</li>
                 </ul>
 
@@ -91,7 +91,13 @@
                 <h4>Bars &amp; Restaurants</h4>
 
                 <ul class="linkList">
-                    <li>TBA</li>
+                    <li><a>Taketwo</a> (0km)</li>
+                    <li><a>Matiate Kinepolis</a> (0km)</li>
+                    <li><a>Den Engel</a> (4km)</li>
+                    <li><a>Bier Central</a> (4km)</li>
+                    <li><a>Kelly's Irish Pub</a> (4km)</li>
+                    <li><a>Zao Wang</a> (sushi) (5km)</li>
+                    <li><a>Kulminator</a> (5km)</li>
                 </ul>
 
             </div>
