--- a/app/views/speaker/proposal_form.html
+++ b/app/views/speaker/proposal_form.html
@@ -19,7 +19,7 @@
 
         <form name="submitProposalForm" onsubmit="return false" ng-cloak>
             <div class="row">
-                <div class="col20">
+                <div class="col12">
                     <h4>Submit Proposal</h4>
                     <input type="hidden" ng-model="model.talk.id">
                     <ul>
@@ -41,141 +41,152 @@
                             <div ng-show="model.talk.event.eventFrom == model.talk.event.eventTo">{{model.talk.event.eventFrom|date:shortDate}}</div>
                             <div ng-hide="model.talk.event.eventFrom == model.talk.event.eventTo">{{model.talk.event.eventFrom|date:shortDate}} until {{model.talk.event.eventTo|date:shortDate}}</div>
                         </li>
+                    </ul>
+                </div>
+            </div>
 
-                        <ul ng-show="model.talk.event"
-                             devoxx-set-focus-on="model.talk.event"
-                             devoxx-set-focus-field="talkTitle">
-                            <li>
-                                <label for="talkTitle">Title</label>
-                                <input id="talkTitle" type="text" ng-model="model.talk.title" required devoxx-uniform>
-                                <span devoxx-errors expression="submitProposalForm.talkTitle"></span>
-                            </li>
-                            <li>
-                                <label>State</label>
-                                <input type="text" disabled ng-model="model.talk.state" devoxx-uniform>
-                            </li>
+            <div class="row">
+                <div class="col12" ng-show="model.talk.event"
+                     devoxx-set-focus-on="model.talk.event"
+                     devoxx-set-focus-field="talkTitle">
+                    <ul>
+                        <li>
+                            <label for="talkTitle">Title</label>
+                            <input id="talkTitle" type="text" ng-model="model.talk.title" required devoxx-uniform>
+                            <span devoxx-errors expression="submitProposalForm.talkTitle"></span>
+                        </li>
+                        <li>
+                            <label>State</label>
+                            <input type="text" disabled ng-model="model.talk.state" devoxx-uniform>
+                        </li>
 
-                            <li>
-                                <label for="talkType">Type</label>
-                                <select name="type"
-                                        id="talkType" ng-model="model.talk.type"
-                                        required
-                                        ng-disabled="!model.talk.event"
-                                        ng-options="t.name for t in model.talk.event.types"
-                                        devoxx-uniform></select>
-                            </li>
+                        <li>
+                            <label for="talkType">Type</label>
+                            <select name="type"
+                                    id="talkType" ng-model="model.talk.type"
+                                    required
+                                    ng-disabled="!model.talk.event"
+                                    ng-options="t.name for t in model.talk.event.types"
+                                    devoxx-uniform></select>
+                        </li>
 
-                            <li>
-                                <label for="talkTrack">Track</label>
-                                <select id="talkTrack"
-                                        name="track"
-                                        ng-model="model.talk.track"
-                                        required
-                                        ng-disabled="!model.talk.event"
-                                        ng-options="t.name for t in model.talk.event.tracks"
-                                        devoxx-uniform></select>
-                            </li>
+                        <li>
+                            <label for="talkTrack">Track</label>
+                            <select id="talkTrack"
+                                    name="track"
+                                    ng-model="model.talk.track"
+                                    required
+                                    ng-disabled="!model.talk.event"
+                                    ng-options="t.name for t in model.talk.event.tracks"
+                                    devoxx-uniform></select>
+                        </li>
 
-                            <li>
-                                <label for="talkAddTag">Tags</label>
-                                <input id="talkAddTag"
-                                       name="addTag"
+                        <li>
+                            <label for="talkAddTag">Tags</label>
+                            <input id="talkAddTag"
+                                   name="addTag"
+                                   type="text"
+                                   ng-model="model.newTag"
+                                   placeholder="Add tag and press return"
+                                   typeahead="t.name for t in getTags($viewValue)"
+                                   devoxx-on-return-key="addTag()"
+                                   devoxx-uniform>
+                        </li>
+                        <li>
+                            <ul style="width: 370px">
+                                <li ng-repeat="tag in model.talk.tags" style="display: inline-block; margin: 0 5px 12px 5px; padding: 5px; border-radius: 5px; border: 1px solid #ccc;font-size: 14px;">
+                                    {{tag.name}}
+                                    <a style="cursor: pointer; font-size: 20px; padding: 5px;"
+                                       ng-click="model.talk.tags.splice($index, 1)">&times;</a></li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <label for="talkAddSpeakerSearchName">Speakers</label>
+                            <span ng-form="AddSpeakerForm">
+                                <input id="talkAddSpeakerSearchName"
                                        type="text"
-                                       ng-model="model.newTag"
-                                       placeholder="Add tag and press return"
-                                       typeahead="t.name for t in getTags($viewValue)"
-                                       devoxx-on-return-key="addTag()"
+                                       ng-model="model.searchSpeakerName"
+                                       placeholder="Add speaker by full name and press return"
+                                       devoxx-on-return-key="addSpeaker()"
                                        devoxx-uniform>
-                            </li>
-                            <li>
-                                <ul style="width: 370px">
-                                    <li ng-repeat="tag in model.talk.tags" style="display: inline-block; margin: 0 5px 12px 5px; padding: 5px; border-radius: 5px; border: 1px solid #ccc;font-size: 14px;">
-                                        {{tag.name}}
-                                        <a style="cursor: pointer; font-size: 20px; padding: 5px;"
-                                           ng-click="model.talk.tags.splice($index, 1)">&times;</a></li>
-                                </ul>
-                            </li>
-
-                            <li>
-                                <label for="talkAddSpeakerSearchName">Speakers</label>
-                                <span ng-form="AddSpeakerForm">
-                                    <input id="talkAddSpeakerSearchName"
-                                           type="text"
-                                           ng-model="model.searchSpeakerName"
-                                           placeholder="Add speaker by full name and press return"
-                                           devoxx-on-return-key="addSpeaker()"
-                                           devoxx-uniform>
-                                </span>
-                                <ul>
-                                    <ul ng-repeat="speaker in model.talk.speakers">
-                                        <li>
-                                            <img ng-src="{{createAvatarUrl(speaker.id, speaker.imageFile)}}">
-                                            {{speaker.firstname}} {{speaker.lastname}} |
-                                            <span ng-show="speaker.unknown" class="alert-info">will be invited by email | </span>
-                                            <span ng-show="speaker.id == model.currentUser.id" class="alert-info">This is you | </span>
-                                            <a ng-click="model.talk.speakers.splice($index, 1)"
-                                               style="cursor: pointer">&times;</a>
-                                        </li>
-                                    </ul>
-                                </ul>
-                            </li>
-
-                            <li>
-                                <label for="talkSummary">Talk summary</label>
-                                <textarea id="talkSummary" ng-model="model.talk.summary" devoxx-uniform required></textarea>
-                            </li>
-
-                            <li>
-                                <label for="talkExtraInfo">Message to program committee (optional)</label>
-                                <textarea id="talkExtraInfo" ng-model="model.talk.extraInfo" devoxx-uniform></textarea>
-                            </li>
-
-                            <li>
-                                <label for="talkAudienceExperience">Audience experience</label>
-                                <select name="audienceExperience"
-                                        id="talkAudienceExperience"
-                                        ng-model="model.talk.audienceExperience"
-                                        ng-options="o.value as o.text for o in model.experienceOptions"
-                                        required
-                                        devoxx-uniform></select>
-                            </li>
-
-                            <li>
-                                <label></label>
-                                <ul class="checkradios clearfix">
-                                    <li>
-                                        <label>
-                                            <input type="checkbox"
-                                                   devoxx-uniform
-                                                   ng-model="model.talk.sharedProposal">
-                                            I allow Devoxx to share my proposal with related User Groups
-                                        </label>
+                            </span>
+                            <ul>
+                                <ul ng-repeat="speaker in model.talk.speakers">
+                                    <li style="padding: 15px 0 0 0">
+                                        <img ng-src="{{createAvatarUrl(speaker.id, speaker.imageFile)}}">
+                                        {{speaker.firstname}} {{speaker.lastname}} |
+                                        <span ng-show="speaker.unknown" class="alert-info">will be invited by email | </span>
+                                        <span ng-show="speaker.id == model.currentUser.id" class="alert-info">This is you | </span>
+                                        <a ng-click="model.talk.speakers.splice($index, 1)"
+                                           style="cursor: pointer">&times;</a>
                                     </li>
                                 </ul>
-                            </li>
+                            </ul>
+                        </li>
 
-                            <li>
-                                <label></label>
-                                <ul class="checkradios clearfix">
-                                    <li>
-                                        <label>
-                                            <input type="checkbox"
-                                                   ng-model="model.termsAndConditionsAgreed"
-                                                   devoxx-uniform
-                                                   required>
-                                            I agree to the terms and conditions
-                                        </label>
-                                    </li>
-                                </ul>
-                            </li>
+                        <li>
+                            <label for="talkSummary">Talk summary</label>
+                            <textarea id="talkSummary" ng-model="model.talk.summary" devoxx-uniform required></textarea>
+                        </li>
 
-                            <li>
-                                <input type="submit" ng-click="submit(model.talk, submitProposalForm)" class="btn btn-primary">Submit</a>
-                            </li>
-                        </ul>
+                        <li>
+                            <label for="talkExtraInfo">Message to program committee (optional)</label>
+                            <textarea id="talkExtraInfo" ng-model="model.talk.extraInfo" devoxx-uniform></textarea>
+                        </li>
+
+                        <li>
+                            <label for="talkAudienceExperience">Audience experience</label>
+                            <select name="audienceExperience"
+                                    id="talkAudienceExperience"
+                                    ng-model="model.talk.audienceExperience"
+                                    ng-options="o.value as o.text for o in model.experienceOptions"
+                                    required
+                                    devoxx-uniform></select>
+                        </li>
+
+                        <li>
+                            <label></label>
+                            <ul class="checkradios clearfix">
+                                <li>
+                                    <label style="width: 370px">
+                                        <input type="checkbox"
+                                               devoxx-uniform
+                                               ng-model="model.talk.sharedProposal">
+                                        I allow Devoxx to share my proposal with related User Groups
+                                    </label>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <label></label>
+                            <ul class="checkradios clearfix">
+                                <li>
+                                    <label style="width: 370px">
+                                        <input type="checkbox"
+                                               ng-model="model.termsAndConditionsAgreed"
+                                               devoxx-uniform
+                                               required>
+                                        I agree to the terms and conditions
+                                    </label>
+                                </li>
+                            </ul>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col6 push6">
+                    <ul>
+                        <li class="btn">
+                            <input type="submit" ng-click="submit(model.talk, submitProposalForm)" name="" value="Submit">
+                        </li>
                     </ul>
 
-                <br class="clear">
+                </div>
             </div>
         </form>
     </div>
